Mon Mar 04 12:29:41 2013  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: remove scale="50" from images apparently that
	  nowdays makes everything 50 pixels large or some other nonsense
	  like that.

Wed Feb 06 22:22:16 2013  Jiri (George) Lebl <jirka@5z.com>

	* lib/number_theoory/primes.gel: update the mersenne stuff

Sun Dec 23 13:22:07 2012  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: fix documentation of less than and greater than
	  (thanks to Marek Cernocky).  Also expand the documentation in
	  several places a little.

Tue Dec 18 20:49:50 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/mpwrap.c, src/calc.c: make a minor optimization, and remove an
	  unsafe unnecessary one

Mon Dec 17 15:15:44 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: bit of post release cleanup

	* help/C/genius.xml: do some fixes, add help about comments and
	  the new way that for loops with floats work.

Mon Dec 17 13:52:35 2012  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.16

Mon Dec 17 13:45:21 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/eval.c: when forloop (sum/prod/for) is with floats then check
	  for overrun, and if within 2^-20 times the step size, then still
	  execute the last body (assume things were because of roundoff
	  error), this makes things like for n=0 to 1 by 0.1 actually work
	  as expected.

	* src/mpwrap.[ch], src/eval.c, src/funclib.c, src/matop.c: minor
	  optimization in make_float and new macro to check real part for
	  being floating point

	* src/geniustests.txt, src/testfourier.gel: update testsuite

Tue Dec 11 00:10:02 2012  Jiri (George) Lebl <jirka@5z.com>

	* configure.in, src/Makefile.am: exorcise last vestiges of the
	  linpack inclusion fiasco, and update to new automake initialization
	  format, and also create xz archives on dist

Mon Dec 10 20:58:42 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: add ability to fit dependent axis automatically