@@ -3182,13 +3182,13 @@ type="http">Genius Web page</ulink>.
     </para>
     <para>
       To report a bug or make a suggestion regarding this application or
-      this manual, follow the directions in this 
-      <ulink url="ghelp:gnome-feedback"   type="help">document</ulink>.
+      this manual, send email to me (the author) or post to the mailing
+      list (see the web page).
     </para>
 
     <para> This program is distributed under the terms of the GNU
       General Public license as published by the Free Software
-      Foundation; either version 2 of the License, or (at your option)
+      Foundation; either version 3 of the License, or (at your option)
       any later version. A copy of this license can be found at this
       <ulink url="ghelp:gpl" type="help">link</ulink>, or in the file
       COPYING included with the source code of this program. </para>
@@ -3196,7 +3196,7 @@ type="http">Genius Web page</ulink>.
     <para>Ji&#345;&#237; Lebl was during various parts of the development
       partially supported for the work by NSF grant DMS 0900885, 
       the University of Illinois at Urbana-Champaign,
-      the University of California at San Diego and
+      the University of California at San Diego, and
       the University of Wisconsin-Madison.  The software has
       been used for both teaching and research.</para>
 
