@@ -1,3 +1,8 @@
+Mon Mar 04 12:33:47 2013  Jiri (George) Lebl <jirka@5z.com>
+
+	* help/C/genius.xml: fix up the about entry to reflect reality a bit
+	  better.
+
 Mon Mar 04 12:29:41 2013  Jiri (George) Lebl <jirka@5z.com>
 
 	* help/C/genius.xml: remove scale="50" from images apparently that
